# Fire-Detection-System

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  __init__.py  alert_system.py  detector.py  examples.py  main.py  preprocessor.py  pyproject.toml  requirements.txt  setup.py  test_detector.py  test_utils.py  test_video_handler.py  utils.py  video_handler.py
