[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-detection-system"
version = "1.0.0"
description = "Real-time fire detection using computer vision"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fire Detection Team", email = "info@firedetection.local"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "imutils>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/yourname/fire-detection-system"
Documentation = "https://github.com/yourname/fire-detection-system#readme"
Repository = "https://github.com/yourname/fire-detection-system.git"

[project.scripts]
fire-detection = "main:main"

[tool.setuptools]
packages = ["src", "config"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
